검색 기능 및 사이드독 추가

--- a/_posts/2023-01-13-first.md
+++ b/_posts/2023-01-13-first.md
@@ -4,6 +4,10 @@ title:  "포스팅 테스트"
 category: 회계
 tag: 자산
 toc: true
+author_profile: false
+sidebar: 
+    nav: "docs"
+search: true
 ---
 
 ## 포스팅 테스트
